--- a/app/src/main/res/layout/receta_detail.xml
+++ b/app/src/main/res/layout/receta_detail.xml
@@ -7,31 +7,6 @@
     android:background="@color/purple_500"
     tools:context=".cocina.DetailCocina">
 
-    <ImageView
-        android:id="@+id/backgroundImageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/all"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/final_fantasy" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="-8dp"
-        android:layout_marginLeft="-8dp"
-        android:layout_marginStart="-8dp"
-        android:background="@drawable/fondo_receta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
@@ -124,24 +99,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name_receta_full"/>
-
-    <ListView
-        android:id="@+id/lv_ingredientes"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/containerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#59000FFF"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_name_receta_full" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:menu="@menu/menu_view"
+        android:background="@color/black"
+        app:itemBackground="@color/black"
+        app:itemIconTint="@color/white"
+        android:backgroundTint="@color/black"
+        app:itemTextColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        app:layout_constraintEnd_toStartOf="@+id/cardView3"
+        app:layout_constraintStart_toStartOf="@+id/containerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
