--- a/app/src/main/res/layout/cocina_add.xml
+++ b/app/src/main/res/layout/cocina_add.xml
@@ -82,7 +82,8 @@ tools:context=".cocina.AddCocina">
                 app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="UnknownIdInLayout" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
