--- a/app/src/main/res/layout/cocina_edit.xml
+++ b/app/src/main/res/layout/cocina_edit.xml
@@ -197,7 +197,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_margin="10dp"
-                    android:text="@string/preparacion"
+                    android:text="@string/descripcion"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
