--- a/app/src/main/res/layout/receta_detail.xml
+++ b/app/src/main/res/layout/receta_detail.xml
@@ -41,7 +41,7 @@
                 android:layout_marginEnd="180dp"
                 android:layout_marginRight="180dp"
                 android:layout_marginBottom="32dp"
-                android:text="@string/preparacion"
+                android:text="@string/descripcion"
                 android:textSize="24sp" />
 
             <TextView
